# connection

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac
data/: Makefile.am  connection.desktop
po/: LINGUAS  Makevars  POTFILES.in  es.po
src/: Makefile.am  conn-hex-widget.c  conn-hex-widget.h  conn-hex.c  conn-hex.h  conn-marshallers.list  conn-ui.c  conn-ui.h  conn-utils.c  conn-utils.h  conn-xmpp.c  conn-xmpp.h  conn.c  connection.glade  connection.ui  sgf_utils.c  sgfgen.c  sgfnode.c  sgftree.c  sgftree.h  utils.h
